# video-search

./: .env  .gitignore  .projenrc.ts  README.md  cdk.json  nx.json  package-lock.json  package.json
app/: .gitignore  Makefile  README.md  app.vue  index.js  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
app/components/: nav.vue
app/lib/: dynamodb-document-client.ts
app/pages/: index.vue
app/plugins/: content-url.ts
app/server/api/: hello.get.ts  videos.get.ts
lambda/: .env  Cargo.toml  Makefile  README.md  a.json  a.vtt  ko.a.srt  ko.a.vtt
lambda/event/: subtitle.json  transcribe-complete.json  transcribe.json
lambda/http/: api.http
lambda/src/: index.rs  lib.rs  subtitle.rs  tantivy.rs
lambda/src/cmd/: app.rs  index.rs  kendra_index.rs  subtitle.rs  tan.rs  tantivy_index.rs  tantivy_search.rs  transcribe-complete.rs  transcribe.rs
lambda/src/handlers/: add_subtitle.rs  index.rs  mod.rs  search.rs  video_detail.rs  video_list_api.rs  video_new.rs  video_search_api.rs
lambda/templates/: base.html  index.html  nav.html  sample.html  search.html  video-detail.html  video-new.html
lib/: video-search-stack.ts
stack/: default-stage.ts  demo-app-stack.ts  devops-stack.ts  domain-name-stack.ts  foundation-stack.ts  kendra-stack.ts  kendra.ts  lambda-stack.ts  tantivy-stack.ts  video-search-ssm.ts  video-search-stack.ts
stage/: video-search-stage.ts
test/: video-search.test.ts
