[package]
name = "lambda"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "transcribe-complete"
path = "src/cmd/transcribe-complete.rs"

[[bin]]
name = "transcribe"
path = "src/cmd/transcribe.rs"

[[bin]]
name = "subtitle"
path = "src/cmd/subtitle.rs"

[[bin]]
name = "app"
path = "src/cmd/app.rs"

[[bin]]
name = "kendra-index"
path = "src/cmd/kendra-index.rs"

[[bin]]
name = "tan"
path = "src/cmd/tan.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
aws-config = "0.10"
aws-sdk-kendra = "0.10"
aws-sdk-transcribe = "0.10"
aws-sdk-translate = "0.10"
aws-sdk-dynamodb = "0.10"
aws-sdk-s3 = "0.10"
aws-sdk-sqs = "0.10"
aws-sdk-sns = "0.10"
dotenv = "0.15"
lambda_runtime = "0.5.1"
aws_lambda_events = "0.6.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.8"
serde_json = "1"
serde = "1"
serde_dynamo = { version = "3.0.3", features = [ "aws-sdk-dynamodb+0_10" ] }
anyhow = "1"
actix-web = "4"
lambda-web = { version = "0.1.9", features = ["actix4"] }
env_logger = "0.9"
actix-web-httpauth = "0.6.0"
askama = "0.11.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = "0.4"
url-escape = "0.1.1"
itertools = "0.10.3"
tantivy = "0.17.0"
lindera-tantivy = { version = "0.13.3", features = [ "ko-dic" ]}


[build-dependencies]
askama = "0.11.1"